# Appstore

./: .eslintrc.cjs  .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  crawl-registry.yml  release.yml
registry/: README.md  index.json  schema.json
registry/apps/: bat.json  delta.json  fd.json  gh.json  helix.json  hyperfine.json  jq.json  lazygit.json  neovim.json  obsidian.json  ollama.json  ripgrep.json  starship.json  zed.json  zoxide.json
registry/candidates/: asdf.json  autocomplete.json  bruno.json  cli.json  continue.json  daytona.json  dive.json  fzf.json  gemini-cli.json  gitleaks.json  glow.json  hyperfine.json  it-tools.json  lapce.json  maigret.json  rtk.json  shellcheck.json  tqdm.json  ultralytics.json  unigetui.json  win11debloat.json  yazi.json  yt-dlp.json  zoxide.json
scripts/: crawl-registry.mjs  validate-registry.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: installer.rs  lib.rs  main.rs  signature.rs  storage.rs
src/components/: AppCard.module.css  AppCard.tsx  InstallButton.module.css  InstallButton.tsx  Layout.module.css  Layout.tsx
src/hooks/: useHost.ts
src/lib/: github.ts  installer.ts  platform.ts  registry.ts  sanitize.ts  types.ts
src/lib/__tests__/: platform.test.ts  (+1 more)
src/pages/: AppDetailPage.tsx  BrowsePage.tsx  InstalledPage.tsx  Pages.module.css  SearchPage.tsx  SettingsPage.tsx
src/state/: AppContext.tsx
src/styles/: global.css
